// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helpers Build anoncreds proof request from template containing two requested attributes 1`] = `
Object {
  "anoncreds": Object {
    "name": "High School Student Name",
    "nonce": "1677766511505",
    "requested_attributes": Object {
      "referent_0": Object {
        "name": "first",
        "names": undefined,
        "non_revoked": undefined,
        "restrictions": Array [
          Object {
            "schema_id": "64zTt4edLTprWQTUkrYhZJ:2:NC High School Student Card:1.0",
          },
        ],
      },
      "referent_1": Object {
        "name": "last",
        "names": undefined,
        "non_revoked": undefined,
        "restrictions": Array [
          Object {
            "schema_id": "64zTt4edLTprWQTUkrYhZJ:2:NC High School Student Card:1.0",
          },
        ],
      },
    },
    "requested_predicates": Object {},
    "version": "0.0.1",
  },
}
`;

exports[`Helpers Build anoncreds proof request from template containing two requested attributes and predicate 1`] = `
Object {
  "anoncreds": Object {
    "name": "High School Student ID",
    "nonce": "1677766511505",
    "requested_attributes": Object {
      "referent_0": Object {
        "name": undefined,
        "names": Array [
          "first",
          "last",
          "studentId",
        ],
        "non_revoked": undefined,
        "restrictions": Array [
          Object {
            "schema_id": "64zTt4edLTprWQTUkrYhZJ:2:NC High School Student Card:1.0",
          },
        ],
      },
    },
    "requested_predicates": Object {},
    "version": "0.0.1",
  },
}
`;
